# foil

./: .gitignore  CMakeLists.txt  Makefile  ackermann.pl  constants.c  defns.i  determinate.c  evaluatelit.c  extern.i  finddef.c  global.c  input.c  interpret.c  join.c  literal.c  main.c  order.c  output.c  prune.c  search.c  state.c  utility.c
data/: ackermann.d  cols.d  crx.d  hinton.d  krk.d  qs.d  reverse.d  row.d  sudoku_3x3.d  sudoku_3x3_2.d
docs/: MANUAL  member.explain
examples/: ackermann2.pl  columns.pl  row.pl  sudoku.pl
src/helpers/: c4tofoil.c
